Fix play icon vertical alignment

--- a/client/src/sass/player/control-bar.scss
+++ b/client/src/sass/player/control-bar.scss
@@ -104,7 +104,9 @@
 
     .vjs-icon-placeholder::before {
       font-size: $control-bar-play-font-size;
-      line-height: initial;
+      line-height: unset;
+      position: relative;
+      top: -1px;
     }
   }
 
